[metadata]
name = netnsplice
version = 0.1.0
author = nosoop
description = Relays content across nework or file sockets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nosoop/netnsplice
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Topic :: Internet
    Topic :: System :: Networking

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    tomli
    pydantic>=1.10.0
