[metadata]
name = netnsplice
version = 0.2.1
author = nosoop
description = Relays content across nework or file sockets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nosoop/netnsplice
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Topic :: Internet
    Topic :: System :: Networking

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    tomli
    pydantic>=1.10.0

[options.extras_require]
netns =
    netns

[options.entry_points]
console_scripts =
    netnsplice = netnsplice.__main__:main
